# arkhe-plugins

./: .gitignore  ARKHE_OS_MONOREPO_FINAL.txt  Cargo.toml  GOOSE_README.md  MANIFESTO_EXPANSAO_OMNISCIENTE.md  MANIFESTO_REVELATION_612_v2.2.json  Makefile  README.md  README_arkhe_generation.md  arkhe_cortex_mae_bridge.py  arkhe_linearidade_1_900.md  arkhe_linearidade_1_937.md  arkhe_linearidade_1_945.md  arkhe_os_app.py  arkhe_os_v6.py  axiarchy_954.lean  buf.gen.yaml  catedral_code_agent.py  cathedral_arkhe_v16_embodied_final.py  cognitive_operators.py  continuous_theosis_finetuning_v1069.py  create_fordefi.py  demo_1069_short_distillation.py  fair_report_consolidated.md  fix_cargo.py  fix_cargo_2.py  fix_cargo_3.py  fix_cargo_4.py  fix_crypto.py  fix_kyber.py  fix_kyber2.py  fix_kyber3.py  fix_kyber4.py  fix_no_std.py  fix_no_std_2.py  fix_test_suite.py  fix_test_suite_even_more.py  fix_test_suite_final.py  fix_test_suite_mesh.py  fix_test_suite_mesh2.py  (+28 more)
arkhe-cathedral-substrato-1200/: .gitignore  Cargo.toml  LICENSE  README.md  cathedral-manifest-v12.10.3.json  manifest_1200.json
arkhe-cathedral-substrato-1200/docs/: FSI_Risk_Matrix_v1.0.0.md  FSI_Whitepaper_v1.0.0.md
arkhe-cathedral-substrato-1200/src/: lib.rs
arkhe-cathedral-substrato-1200/src/chain/: mod.rs  rbb_client_stub.rs
arkhe-cathedral-substrato-1200/src/chain/pqc/: sphincs.rs
arkhe-cathedral-substrato-1200/src/cognitive/: mod.rs  oniscience.rs  swireasoning.rs
arkhe-cathedral-substrato-1200/src/contracts/: ArkheFederation.sol
arkhe-cathedral-substrato-1200/src/inference/: engine.rs  federated_router.rs  mod.rs
arkhe-cathedral-substrato-1200/src/security/: creek_guard_stub.rs  creekguard.rs  mod.rs  tee.rs
arkhe-cathedral-substrato-1200/src/wormgraph/: mod.rs  wormgraph_core.rs  wormgraph_dashboard.rs  wormgraph_ffi.rs  wormgraph_temporal.rs  wormgraph_wasm.rs
arkhe-os/: Cargo.toml  Makefile  ORCHIDEAS.md  README.md
arkhe-os/.github/: CODEOWNERS  OWNERS_ROTATION.yaml
arkhe-os/.github/workflows/: ai-audit-weekly.yml  kani-proofs.yml  legacy-audit.yml  tla-check.yml
arkhe-os/boot/: bootloader.asm  bootloader.ld
arkhe-os/crates/arkhe-agents/: Cargo.toml
arkhe-os/crates/arkhe-agents/src/: lib.rs
arkhe-os/crates/arkhe-audit/: Cargo.toml
arkhe-os/crates/arkhe-audit/src/: ai_auditor.rs  lib.rs
arkhe-os/crates/arkhe-core/: Cargo.toml
arkhe-os/crates/arkhe-core/src/: lib.rs  string_safe.rs
arkhe-os/crates/arkhe-core/tests/: squidbleed_pattern.rs
arkhe-os/crates/arkhe-flock/src/: lib.rs
arkhe-os/crates/arkhe-governance/: Cargo.toml
arkhe-os/crates/arkhe-governance/src/: async_guard.rs  flock.rs  guard.rs  invariants.rs  lib.rs  safe_core.rs
arkhe-os/crates/arkhe-nexus-governance/: Cargo.toml
arkhe-os/crates/arkhe-nexus-governance/src/: adapters.rs  admin_actions.rs  lib.rs  migration.rs
arkhe-os/crates/arkhe-parsing/src/: did.rs  iban.rs
arkhe-os/crates/arkhe-security-audit/: Cargo.toml
arkhe-os/crates/arkhe-security-audit/src/: lib.rs
arkhe-os/kernel/: Cargo.toml
arkhe-os/kernel/src/: ipc.rs  isolation.rs  main.rs  memory.rs  scheduler.rs  syscalls.rs  temporal.rs
arkhe-os/libs/arklib/: Cargo.toml
arkhe-os/libs/arklib/src/: lib.rs
arkhe-os/libs/nostr/: Cargo.toml
arkhe-os/libs/nostr/src/: lib.rs
arkhe-os/libs/pqc/: Cargo.toml
arkhe-os/libs/pqc/src/: lib.rs
arkhe-os/scripts/: audit_legacy.rs  legacy_sunset.rs  rotate_reviewers.rs
arkhe-os/servers/bindu/: Cargo.toml
arkhe-os/servers/bindu/src/: main.rs
arkhe-os/servers/net/: Cargo.toml
arkhe-os/servers/net/src/: main.rs
arkhe-os/servers/orchestrator/: Cargo.toml
arkhe-os/servers/orchestrator/src/: main.rs
arkhe-os/servers/passport/: Cargo.toml
arkhe-os/servers/passport/src/: main.rs
arkhe-os/servers/vfs/: Cargo.toml
arkhe-os/servers/vfs/src/: main.rs
arkhe-os/specs/: squidbleed_detection.tla
arkhe-os/tools/arkhe-image-builder/: Cargo.toml
arkhe-os/tools/arkhe-image-builder/src/: lib.rs
arkhe-os/tools/arkhe-sh/: Cargo.toml
arkhe-os/tools/arkhe-sh/src/: main.rs
arkhe-os/tools/checkpoint/: Cargo.toml
arkhe-os/tools/checkpoint/src/: main.rs
arkhe-os/tools/pkg/: Cargo.toml
arkhe-os/tools/pkg/src/: main.rs
arklib/: __init__.py  pyproject.toml  resonance.py
cathedral-33t/: Cargo.toml  README.md
cathedral-33t/src/: config.rs  lib.rs  main.rs
cathedral-33t/src/attention/: csa.rs  hca.rs
cathedral-33t/src/mhc/: mod.rs
cathedral-33t/src/moe/: load_balancer.rs
cathedral-33t/src/speculative/: eagle3.rs
cathedral-33t/tests/integration/: mod.rs  moe_tests.rs
cathedral-33t/tests/unit/: mod.rs  tensor_tests.rs
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/COGNITIVE_CORTEX/onto_cathedral/domains/: physics.ttl
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: threshold_mobile_app.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py
cathedral-agi-omega/ci_cd/: github_actions_prove.yml  reject_unproven.py
cathedral-arkhe-v28.3/orchestrator/: Cargo.toml
cathedral-arkhe-v28.3/orchestrator/examples/: dynamic_selection.rs
cathedral-arkhe-v28.3/orchestrator/src/: config_loader.rs  lib.rs  main.rs  multi_agent.rs  stubs.rs
cathedral-arkhe-v28.3/orchestrator/src/attestation/: manager.rs  mod.rs
cathedral-arkhe-v28.3/orchestrator/src/geometry/: causal_inner_product.rs  mod.rs  (+5 more)
cathedral-cse/: Cargo.toml
cathedral-cse/src/: lib.rs  main.rs
cathedral-cse/src/agent/: cca_v2.rs
cathedral-cse/src/attention/: spatial.rs
cathedral-cse/src/llm/: mod.rs
cathedral-cse/src/moe/: experts.rs  orchestrator.rs
cathedral-cse/src/mtp/: predictor.rs
cathedral-cse/src/sahoo/: plus.rs
cathedral-cse/src/thinking/: engine.rs
cathedral-cse/src/tools/: context.rs
cathedral-cse/src/trinity/: core.rs
plugins/arkhe_jax/: Cargo.toml  DECRETO_260_3.md
(+459 files in other folders)
