[package]
name = "cathedral-qvac"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
hex = "0.4"
futures = "0.3"
axum = "0.7"
bytes = "1.0"
reqwest = "0.12"
