[package]
name = "cathedral-qvac"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
hex = "0.4.3"
futures = "0.3"
axum = "0.8.9"
bytes = "1.0"
reqwest = "0.12"
