[workspace]
members = [
    "kernel",
    "servers/vfs",
    "servers/net",
    "servers/passport",
    "servers/orchestrator",
    "servers/bindu",
    "tools/arkhe-sh",
    "tools/pkg",
    "tools/checkpoint",
    "libs/arklib",
    "libs/pqc",
    "libs/nostr",
    "crates/arkhe-parsing",
    "crates/arkhe-flock",
    "crates/arkhe-governance",
    "crates/arkhe-nexus-governance"
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
