[package]
name = "cathedral-33t"
version = "1.0.0"
edition = "2021"
authors = ["Cathedral ARKHE Team <cathedral@arkhe.ai>"]
description = "Cathedral ARKHE 33T — 33 trillion parameter MoE model (functional reference implementation)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-33t"
readme = "README.md"

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"

# Numerical backend
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rayon = "1.8"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
mockito = "1.0"

[[bench]]
name = "routing"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = []
