[package]
name = "cathedral-cse"
version = "14.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Cathedral ARKHE Team"]
description = "Cathedral Cognitive Singularity Engine — v14.1"
license = "MIT OR Apache-2.0"

[dependencies]
k8s-openapi = { version = "0.23.0", features = ["v1_28"] }

# ============================================================================
# Async Runtime
# ============================================================================
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# ============================================================================
# HTTP / API
# ============================================================================
axum = { version = "0.8.9", features = ["json", "macros"] }
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# ============================================================================
# Serialização
# ============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bincode = { package = "bincode-next", version = "3.1.1" }

# ============================================================================
# Logging & Tracing
# ============================================================================
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
anyhow = "1.0.102"
thiserror = "2.0.18"

# ============================================================================
# Tokenização (MTP) ✅ CSE-HIGH-008
# ============================================================================
tokenizers = "0.19"

# ============================================================================
# Computação Numérica (Spatial Attention) ✅ CSE-CRIT-001
# ============================================================================
ndarray = "0.17.2"
rayon = "1.12.0"

# ============================================================================
# Crypto (PAX / ML-DSA)
# ============================================================================
ark-ff = "0.5"
ark-bls12-381 = "0.5"

ml-dsa = "0.1"
blake3 = "1.3"

# ============================================================================
# K8s / Hot Reload
# ============================================================================
kube = { version = "0.95" , features = ["client", "derive"] }

# ============================================================================
# Monitorização
# ============================================================================
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# ============================================================================
# Utilitários
# ============================================================================
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
regex = { version = "1.10", features = ["std"] }
once_cell = "1.19"
rand = "0.10.1"
base64 = "0.22"

# ============================================================================
# Dependências da Cathedral (substratos existentes)
# ============================================================================
cathedral-trinity = { path = "../cathedral-trinity", version = "*" }
cathedral-eac = { path = "../cathedral-eac", version = "*" }
cathedral-mesh = { path = "../cathedral-mesh", version = "*" }
cathedral-crypto = { path = "../cathedral-crypto", version = "*" }
cathedral-tools = { path = "../cathedral-tools", version = "*" }
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4.5"
mockito = "1.7.0"
