[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
ndarray = "0.17.2"
nalgebra = "0.32"
tokio = { version = "1.52.3", features = ["full"] }
lazy_static = "1.4"
prometheus = "0.13"
chrono = "0.4.45"
uuid = { version = "1.23.3", features = ["v4"] }
tracing = "0.1.44"
anyhow = "1.0.102"
async-trait = "0.1"
axum = "0.8.9"
tracing-subscriber = "0.3.23"
