[package]
name = "arkhe-governance"
version = "2.1.0"
edition = "2021"

[dependencies]
arkhe-core = { path = "../arkhe-core" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
blake3 = "1.3"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
arkhe-flock = { path = "../arkhe-flock" }
serde = { version = "1.0", features = ["derive"] }
