[package]
name = "arkhe-octra-bridge"
version = "996.1.0"
authors = ["Arquiteto ORCID 0009-0005-2697-4668"]
edition = "2021"
description = "Bridge entre ARKHE OS (996) e Octra L1 FHE Blockchain"
license = "Axiarchy-1.0"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", features = ["json"] }
sha3 = "0.10"
hex = "0.4.3"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
tokio-test = "0.4.5"
